<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">SecuredDigitalWallet</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Help</string>
    <string name="title_section2">About</string>
    <string name="title_section3">Section 3</string>
    
    <string name="name">NAME</string>
    <string name="company_name">COMPANY</string>
    <string name="phone_number">NUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="street_line_1">STREET LINE 1</string>
    <string name="street_line_2">STREET LINE 1</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="country">COUNTRY</string>
    <string name="email">EMAIL</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="work_email">WORK EMAIL</string>
    <string name="personal_email">PERSONAL EMAIL</string>
    <string name="website">WEBSITE</string>
    <string name="navigateToContact">Reach the Contact</string>
    
    <string-array name="phone_numbers">
        <item>office</item>
        <item>mobile</item>
        <item>fax</item>
        <item>pager</item>
        <item>other</item>
    </string-array>
    
</resources>